[package]
name = "ovrouter"
version = "0.1.0"
authors = ["yanbowen <bowen.yan@gitblit.com>"]

[[bin]]
name = "ovrouter"

[[bin]]
name = "setup"

[[bin]]
name = "test"

[lib]
name = "ovrouter"

[dependencies]
log = "0.4.5"
simple_logger = "1.0.1"

clap = "2.32.0"
config = "~0.9.1"

bytes = "0.4"

json = "*"

actix = "0.7"
actix-web = { version = "0.7", features=["ssl"] }

chrono = "*"
os_type = "*"
regex = "*"
curl = "*"
serde = "1.0.82"
serde_json = "1.0.33"
serde_derive = ""
futures = "*"

uuid = "0.7.1"
rustc-serialize = "0.3.24"
openssl = "0.10.16"

httparse="1.3.3"