[workspace]
members = [
    "dnet-cgi",
    "dnet-cli",
#    "dnet-app-qt",
#    "dnet-app-mac",
#    "dnet-app-webview",
    "dnet-daemon",
    "dnet-path",
    "dnet-types",
    "ipc-client",
    "ipc-server",
    "router-plugin",
    "tinc-plugin",
]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
