[package]
name = "common-core"
version = "0.1.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
clap = "2.32"
config="0.9"
err-derive = "0.1.5"
fern = { version = "0.5", features = ["colored"] }
log = "0.4"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-signal = "1.1"
