[package]
name = "dnet-cgi"
version = "1.0.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
edition = "2018"

[[bin]]
name = "dnet"
path = "src/main.rs"

[dependencies]
clap = "2.32"
dnet-types = { path = "../dnet-types" }
err-derive = "0.1.5"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ipc-server = { path = "../ipc-server" }
ipc-client = { path = "../ipc-client" }
router-plugin = { path = "../router-plugin" }
