[package]
name = "dnet-daemon"
version = "1.0.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
edition = "2018"

[[bin]]
name = "dnet-daemon"
path = "src/main.rs"

[features]
router_debug = ["router-plugin"]

[dependencies]
bytes = "0.4"
clap = "^2.32"
chrono = "0.4.6"
config="0.9"
duct = "0.12"
err-derive = "0.1.5"
fern = { version = "0.5", features = ["colored"] }
futures = "0.1"
log = "0.4"
mac_address = "1.0"
openssl = "0.10"
os_type = "2.2.0"
regex = "1.1.0"
reqwest = "0.9.24"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
socket2 = "0.3.11"
tokio = "0.1"
tokio-core = "0.1"
trust-dns-resolver = "0.12.0"
url = "2.1"
uuid = "0.7"

parking_lot = "0.8"
jsonrpc-client-core = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-ipc = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-core = { git = "https://github.com/mullvad/jsonrpc", branch = "mullvad-fork" }
jsonrpc-ipc-server = { git = "https://github.com/mullvad/jsonrpc", branch = "mullvad-fork" }
jsonrpc-pubsub = { git = "https://github.com/mullvad/jsonrpc", branch = "mullvad-fork" }
jsonrpc-macros = { git = "https://github.com/mullvad/jsonrpc", branch = "mullvad-fork" }

dnet-path = { path = "../dnet-path" }
dnet-types = { path = "../dnet-types" }
ipc-server = { path = "../ipc-server" }
pinger = { path = "../pinger" }
sandbox = { path = "../sandbox" }
tinc-plugin = { path = "../tinc-plugin" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
simple-signal = "1.1"
base64 = "0.11.0"

[target.'cfg(windows)'.dependencies]
windows-named-pipe = "0.1.0"
ctrlc = "3.0"
ceviche = "*"

[dependencies.router-plugin]
path = "../router-plugin"
optional = true

[target.arm-unknown-linux-musleabihf.dependencies]
router-plugin = { path = "../router-plugin" }
base64 = "0.11.0"

[target.'cfg(all(target_arch = "x86_64", not(feature = "router_debug")))'.dependencies]
actix = "0.8.3"
actix-web = { version = "1.0.8", features = ["ssl"] }

[target.'cfg(target_os="macos")'.dependencies]
ceviche = "*"