[package]
name = "ipc-client"
version = "0.1.0"
authors = ["Mullvad VPN <admin@mullvad.net>"]
description = "IPC client and server for talpid"
license = "GPL-3.0"
edition = "2018"

[dependencies]
err-derive = "0.1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
tokio = "0.1"
futures = "0.1"

dnet-daemon = { path = "../dnet-daemon" }

jsonrpc-client-core = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-ipc = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-pubsub = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }

