[package]
name = "management-client"
version = "0.1.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
description = "IPC client and server for talpid"
license = "GPL-3.0"
edition = "2018"

[dependencies]
err-derive = "0.1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
tokio = "0.1"
futures = "0.1"

dnet-types = { path = "../dnet-types" }

jsonrpc-client-core = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-ipc = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }
jsonrpc-client-pubsub = { git = "https://github.com/mullvad/jsonrpc-client-rs", rev = "68aac55b" }

