[package]
name = "ovrouter-gui"
version = "0.1.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
juniper = "0.9.2"
juniper_codegen = "0.11.1"
ovrouter = {path = "../"}
serde = "^1.0.8"
serde_json = "^1.0.8"
serde_derive = "^1.0.8"
env_logger = "0.5"
futures = "0.1"
rustc-serialize = "0.3.24"