[package]
name = "ovrouter"
version = "0.1.0"
authors = ["yanbowen <bowen.yan@gitblit.com>"]

[[bin]]
name = "dnetovr"
path = "src/bin/ovrouter.rs"

[lib]
name = "ovrouter"

[dependencies]
actix = "0.7"
actix-web = { version = "0.7", features=["ssl"] }
chrono = "0.4.6"
bytes = "0.4"
clap = "2.32.0"
config = "~0.9.1"
duct = "0.12"
err-derive = "0.1.5"
fern = { version = "0.5", features = ["colored"] }
futures = "0.1.25"
log = "0.4"
openssl = "0.10"
os_type = "2.2.0"
regex = "1.1.0"
reqwest = "0.9.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
simple-signal = "1.1"
tinc-plugin = { path = "../tinc-plugin" }
trust-dns-resolver = "0.12.0"
uuid = "0.7.1"
