[package]
name = "proxy-daemon"
version = "0.1.0"
authors = ["yanbowen <bowen.yan@gitblit.com>"]

[[bin]]
name = "dnetovr"
path = "src/main.rs"

[dependencies]
actix = "0.7"
actix-web = { version = "0.7", features=["ssl"] }
chrono = "0.4.6"
common-core = { path = "../common-core" }
bytes = "0.4"
duct = "0.12"
err-derive = "0.1.5"
futures = "0.1.25"
log = "0.4"
openssl = "0.10"
os_type = "2.2.0"
regex = "1.1.0"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tinc-plugin = { path = "../tinc-plugin" }
trust-dns-resolver = "0.12.0"
uuid = "0.7.1"
