[package]
name = "tinc-plugin"
version = "0.1.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
edition = "2018"

[[bin]]
path = "./src/bin/report.rs"
name = "tinc-report"

[dependencies]
chrono = "0.4.6"
fern = { version = "0.5", features = ["colored"] }
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"