[package]
name = "tinc-plugin"
version = "0.1.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
edition = "2018"

[[bin]]
path = "./src/main.rs"
name = "tinc-report-test"

[[bin]]
path = "./src/bin/report.rs"
name = "tinc-report"

[dependencies]
duct = "0.12"
err-derive = "0.1.5"
ipconfig = "0.2.1"
log = "0.4"
tokio = "0.1"
futures = "0.1"
derive-try-from-primitive = "0.1.0"
openssl = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ipc-client = { path = "../ipc-client" }