[package]
name = "tinc-plugin"
version = "0.1.0"
authors = ["bowen.yan <bowen.yan@siteview.com>"]
edition = "2018"

[dependencies]
duct = "0.12"
err-derive = "0.1.5"
ipconfig = "0.2.1"
log = "0.4"
tokio = "0.1"
futures = "0.1"
derive-try-from-primitive = "0.1.0"
openssl = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
socket2 = "0.3.11"
dnet-path = { path = "../dnet-path" }
management-client = { path = "../management-client" }